--- a/src/Marek/ArticlesBundle/Resources/views/Secured/login.html.twig
+++ b/src/Marek/ArticlesBundle/Resources/views/Secured/login.html.twig
@@ -31,7 +31,7 @@
 
     <div class="row">
         <p class="text-muted">
-            Domyślny użytkownicy:
+            Domyślni użytkownicy:
         </p>
         <ul class="text-muted">
             <li><em>user/userpass</em> <small>(ROLE_USER)</small></li>
