Hode logout link for anonymous users

--- a/src/Marek/ArticlesBundle/Resources/views/_navbar.html.twig
+++ b/src/Marek/ArticlesBundle/Resources/views/_navbar.html.twig
@@ -1,5 +1,4 @@
-<div class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
+<div class="navbar navbar-inverse" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -8,15 +7,19 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-                Witaj <strong>{{ app.user ? app.user.username : 'Anonymous' }}</strong>
+                Witaj <strong>{{ app.user ? app.user.username : '' }}</strong>
             </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                 <a href="{{ path('_logout') }}">Wyloguj</a>
+                    {% if app.user %}
+                        <a href="{{ path('_logout') }}">
+                            <span class="glyphicon glyphicon-log-out"></span>
+                            Wyloguj
+                        </a>
+                    {% endif %}
                 </li>
             </ul>
         </div><!--/.nav-collapse -->
-    </div>
 </div>
