--- a/src/Marek/ArticlesBundle/Resources/views/Articles/manage.html.twig
+++ b/src/Marek/ArticlesBundle/Resources/views/Articles/manage.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MarekArticlesBundle::layout.html.twig' %}
+{% extends '::layout.html.twig' %}
 
 {# OVERRIDE FORM_ERRORS FOR CUSTOM COLOR#}
 {% form_theme form _self %}
