--- a/src/Marek/ArticlesBundle/Resources/views/Articles/preview.html.twig
+++ b/src/Marek/ArticlesBundle/Resources/views/Articles/preview.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MarekArticlesBundle::layout.html.twig' %}
+{% extends '::layout.html.twig' %}
 {% block body %}
     <a class="btn btn-default" href="{{ path('marek_articles_index') }}">
         <span class="glyphicon glyphicon-chevron-left"></span> {{ 'Powrót' }}
