--- a/app/Resources/views/_navbar.html.twig
+++ b/app/Resources/views/_navbar.html.twig
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     {% if app.user %}
-                        <a href="{{ path('_logout') }}">
+                        <a href="{{ path('fos_user_security_logout') }}">
                             <span class="glyphicon glyphicon-log-out"></span>
                             Wyloguj
                         </a>
