--- a/src/Marek/ArticlesBundle/Resources/views/Articles/index.html.twig
+++ b/src/Marek/ArticlesBundle/Resources/views/Articles/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MarekArticlesBundle::layout.html.twig' %}
+{% extends '::layout.html.twig' %}
 {% block body %}
     {% set currentFilters = { } %}
 
