--- a/src/Marek/ArticlesBundle/Resources/views/welcome.html.twig
+++ b/src/Marek/ArticlesBundle/Resources/views/welcome.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MarekArticlesBundle::layout.html.twig' %}
+{% extends '::layout.html.twig' %}
 {% block body %}
 <h1>Welcome</h1>
     Go to <a href="{{ path('marek_articles_index') }}">Articles manager</a>!
